--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,8 @@
 
     <repositories>
         <repository>
-            <id>dv8tion</id>
-            <name>m2-dv8tion</name>
-            <url>https://m2.dv8tion.net/releases</url>
-        </repository>
-        <repository>
             <id>central</id>
-            <name>bintray</name>
-            <url>https://jcenter.bintray.com</url>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
         <repository>
             <id>jitpack.io</id>
