--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,14 @@
 
     <repositories>
         <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
+        </repository>
+        <repository>
             <id>central</id>
-            <url>https://repo1.maven.org/maven2</url>
+            <name>bintray</name>
+            <url>https://jcenter.bintray.com</url>
         </repository>
         <repository>
             <id>jitpack.io</id>
@@ -36,7 +42,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.4.1_353</version>
+            <version>5.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.jagrosh</groupId>
