--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,10 @@
     <packaging>jar</packaging>
 
     <repositories>
-        <repository>
-            <id>central</id>
-            <name>bintray</name>
-            <url>https://jcenter.bintray.com</url>
-        </repository>
+    <repository>
+        <id>central</id>
+        <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
         <repository>
             <id>dv8tion</id>
             <name>m2-dv8tion</name>
